--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </td>
             </tr>
 
-            <!--Address line 2-->
+            <!--address line 2-->
             <tr>
                 <td>
                     <label>Address Line 2:</label>
@@ -326,7 +326,7 @@
             <tr>
                 <td colspan="3">
                     <p>Describe current health concern:</p>
-                    <textarea cols="71" rows="3" name="healthConcern" maxlength="256"></textarea>
+                    <textarea cols="81" rows="3" name="healthConcern" maxlength="256"></textarea>
                 </td>
             </tr>
             <!--prior visit question-->
